# rust-miniprojects

fizzbuzz/: Cargo.toml
fizzbuzz/src/: main.rs
zuul/: Cargo.toml
zuul/src/: main.rs  my_structure.rs
zuul/src/my_structure/: all_purpose_room.rs  direction.rs  entrance.rs  history,rs  kitchen.rs  main_entrance.rs  room.rs  room_state.rs  rule_engine.rs  sex_dungeon.rs  wine_celler.rs
