[package]
name = "zuul"
version = "0.1.0"
authors = ["Spas Zahariev <spaszahriev54@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"


[[bin]]
edition = "2021"
name = "spas_zuul_game"
path = "src/main.rs"
